[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-quality-score"
version = "1.2.0"
description = "The world's first named AI prompt quality score. Score and optimize prompts before LLM inference."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ken Burbary", email = "onchainintel@proton.me" }]
keywords = ["prompt", "quality", "score", "llm", "ai", "crewai", "agents", "pqs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.80.0"]
all = ["crewai>=0.80.0"]

[project.urls]
Homepage = "https://pqs.onchainintel.net"
Repository = "https://github.com/OnChainAIIntel/pqs-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["pqs_sdk*"]
